fluent-bit-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: fluent-bit-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/fluent-bit-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/fluent-bit-default: "true"
